temp fix for scrollbar on chromium browsers

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
     font-family: "Baloo";
     font-size: 1rem;
     margin: 0;
+    overflow: hidden;
     min-width: 16svw;
     height: 100vh;
     background-color: #000;
@@ -111,7 +112,6 @@ section {
     position: absolute;
     opacity: 0;
     visibility: hidden;
-    overflow-y: auto;
     transition: opacity 0.1s cubic-bezier(0, 0, 0.21, 1), visibility 0s 0.1s;
 }
 
